# bingusflix

./: .gitignore  README.md  edit_dev1.txt  edit_dev2.txt  package-lock.json  package.json  r
backend/: pyproject.toml
backend/src/: conftest.py  main.py
backend/src/api/: acao.py  account_recovery.py  comedia.py  favorites.py  ficcao.py  filmes_em_alta.py  history.py  login.py  my_list.py  profiles.py  romance.py  router.py  series_em_alta.py  suspense.py  users.py
backend/src/config/: config.py
backend/src/db/: __init__.py  database.py  db copy.json  db.json  db_mananger.py  testeDB.py
backend/src/schemas/: favorite.py  generics.py  item.py  library.py  movies.py  profile.py  recovery.py  response.py  test_video.py  tv_series.py  user.py  videos.py
backend/src/service/meta/: user_service_meta.py
backend/src/tests/api/: test_favorites.py  test_history.py  test_profiles.py  test_users.py  unit_test_account_recovery.py  unit_test_login.py
backend/src/tests/api/features/: account_recovery.feature  emalta.feature  favorites.feature  future_history.features  gender.feature  history.feature  login.feature  my_list.feature  profiles.feature  users.feature
backend/src/tests/api/step_definitions/: test_acao.py  test_account_recovery.py  test_favorites.py  test_filmes_em_alta.py  test_history.py  test_login.py  test_my_list.py  test_profiles.py  test_users.py
backend/src/tests/api/utils/: utils.py
features/: account_recovery.feature  add_assistidos_recentemente.feature  falha_historico.feature  favorites.feature  gender_division.feature  genderdivision.feature  historico.feature  login.feature  my_list.feature  new_feature.feature  out_of_10_recentemente.feature  profiles.feature  successful_search.feature  top10.feature  user_management.feature
frontend/: cypress.config.ts  package-lock.json  package.json  tsconfig.json
(+74 files in other folders)
