[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Hugo Marques <43884516+hggmarks@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pydantic = {extras = ["email"], version = "^2.1.1"}
python-dotenv = "^1.0.0"
httpx = "^0.24.1"
pysondb-v2 = "^2.1.0"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-bdd = "^6.1.1"
taskipy = "^1.11.0"
blue = "^0.9.1"
ruff = "^0.0.280"
httpx = "^0.24.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
exclude = ['.venv', 'migrations']

[tool.isort]
profile = "black"
line_length = 79

[tool.pytest.ini_options]
pythonpath = "."

[tool.blue]
extend-exclude = '(migrations/)'

[tool.taskipy.tasks]
lint = 'ruff . && blue --check . --diff'
format = 'blue .  && isort .'
run = 'uvicorn src.main:app --reload'
pre_test = 'task lint'
test = 'pytest -s -x --cov=src/ -vv'
post_test = 'coverage html'
